--- a/app/views/home.handlebars
+++ b/app/views/home.handlebars
@@ -91,7 +91,7 @@
 				<div class='flex items-center justify-center w-full h-96 lg:w-1/2'>
 					<img
 						class='object-cover w-full h-full mx-auto rounded-md lg:max-w-2xl'
-						src='https://images.unsplash.com/photo-1543269664-7eef42226a21?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80'
+						src='https://images.unsplash.com/photo-1603575448878-868a20723f5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80'
 						alt='glasses photo'
 					/>
 				</div>
